<resources>
    <string name="app_name">Car Application</string>
    <string name="title_activity_main">Car Application</string>

    <string name="action_settings">Settings</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Customer</string>
    <string name="delete">Delete Customer</string>
    <string name="save">Save Customer</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="make">Make</string>
    <string name="cost">cost</string>


    <string name="deleteCustomer">Confirm Customer deletion.</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="title_activity_activity_edit">Create or Edit Customer</string>
</resources>
