<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size" >

            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/editTextFirstName"
            android:layout_alignStart="@+id/editTextFirstName">
        </EditText>

        <EditText
            android:id="@+id/editTextMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/editTextFirstName"
            android:layout_alignStart="@+id/editTextFirstName"
            android:layout_marginTop="86dp" />

        <EditText
            android:id="@+id/editTextCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/editTextMake" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextFirstName"
            android:layout_toRightOf="@+id/editTextFirstName"
            android:layout_alignParentLeft="true"
            android:text="@string/firstName"
            android:textSize="@dimen/text_size" />
        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textSize="@dimen/text_size"
            android:layout_alignBottom="@+id/editTextLastName"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextMake"
            android:layout_toRightOf="@+id/editTextMake"
            android:layout_alignParentLeft="true"
            android:text="@string/make"
            android:textSize="@dimen/text_size"
            android:layout_alignEnd="@+id/textViewLastName"
            android:layout_alignParentEnd="false" />

        <TextView
            android:id="@+id/textViewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="@dimen/text_size"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="run"
            android:text="@string/save"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:visibility="gone">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                android:textSize="@dimen/text_size"/>

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/edit"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>